--- a/src/_comment.html
+++ b/src/_comment.html
@@ -4,9 +4,8 @@
       <use xlink:href="img/icons/icons.svg#twitter"></use>
     </svg>
     <p class="comment__text">
-      RT @collis: Trade growth ideas with other founders. Look for ways to cross
-      promote. Small startups today may be big friends later. (9/10)
-      <a href="#" class="comment__link">2 days ago</a>
+      RT Коллинс: Тренер — это подъёмный кран, ученик — строящееся здание. Даже став выше крана, здание нуждается в нём, если желает стать небоскрёбом.
+      <a href="#" class="comment__link">2 дня назад</a>
     </p>
   </div>
 </section>
