--- a/src/_events.html
+++ b/src/_events.html
@@ -1,6 +1,6 @@
 <div class="events">
   <h2 class="events__title">
-    NEXT EVENTS
+    Ближайшие мероприятия
   </h2>
   <div class="events__block">
     <div class="events__event">
@@ -11,10 +11,10 @@
         <img class="events__img" src="/img/aerobics-1.jpg" alt="aerobics-img">
       </div>
       <div class="events__info">
-        <p class="events__time">12.00 - 13.00</p>
+        <p class="events__time">10.00 - 12.00</p>
         <p class="events__name">Аэробика</p>
         <p class="events__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit
+          Гимнастика, состоящая из аэробных упражнений под ритмичную музыку
         </p>
         <a href="#" class="events__btn">Читать</a>
       </div>
@@ -31,7 +31,7 @@
         <p class="events__time">12.00 - 13.00</p>
         <p class="events__name">Спиннинг</p>
         <p class="events__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit
+          Ритмическое катание на тренажере-велосипеде в ритм музыки
         </p>
         <a href="#" class="events__btn">Читать</a>
       </div>
