--- a/src/_footer.html
+++ b/src/_footer.html
@@ -3,15 +3,15 @@
     <div class="container">
       <div class="footer-top__wrapper">
         <div class="footer__signup">
-          <h3 class="footer__signup-title">NEWSLETTER SIGNUP
+          <h3 class="footer__signup-title">Подписаться на новости
           </h3>
-          <p class="footer__signup-subtitle">Sign up for our newsletter 
+          <p class="footer__signup-subtitle">Подпишитесь на нашу рассылку
             <br>
-          and get the latest news.
+          и получайте самые свежие новости
           </p>
           <form class="footer__form" action="#" >
-            <input class="footer__input" type="text"  placeholder="INSERT EMAIL">
-            <button class="footer__btn">Submit email</button>
+            <input class="footer__input" type="text"  placeholder="Ваш Email">
+            <button class="footer__btn">Подтвердить подписку</button>
           </form>
         </div>
         <div class="footer__contacts">
@@ -19,10 +19,10 @@
             <img src="img/logo.png" alt="logo">
           </a>
           <p class="footer__contacts-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .
+            GYM подстраивается под вас. Время, место, количество и направление тренировок выбирайте сами. Звоните или пишите по любым вопросам.
           </p>
           <p class="footer__phone">
-            Phone: 
+            Телефон: 
             <a href="tel:19003429876" class="footer__phone-link">1-900-342-9876</a>
           </p>
           <p class="footer__email">
@@ -32,51 +32,51 @@
         </div>
         <nav class="footer__menu">
           <h3 class="footer__menu-title">
-            Menu 
+            Меню
           </h3>
           <ul class="footer__menu-list">
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                About</a>
+                О нас</a>
             </li>
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                Trainers</a>
+                Тренеры</a>
             </li>
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                Classes</a>
+                Категории</a>
             </li>
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                Pricing</a>
+                Цена</a>
             </li>
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                Privacy</a>
+                Политика</a>
             </li>
             <li class="footer__menu-name">
               <a href="#" class="footer__menu-link">
-                Contact</a>
+                Контакты</a>
             </li>
           </ul>
         </nav>
         <nav class="footer__community">
           <h3 class="footer__community-title">
-            Community
+            Сообщество
           </h3>
           <ul class="footer__community-list">
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">Blog</a>
+              <a href="#" class="footer__community-link">Блог</a>
             </li>
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">Forum</a>
+              <a href="#" class="footer__community-link">Форум</a>
             </li>
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">Support</a>
+              <a href="#" class="footer__community-link">Поддержка</a>
             </li>
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">News</a>
+              <a href="#" class="footer__community-link">Новости</a>
             </li>
           </ul>
         </nav>
@@ -90,7 +90,7 @@
           <svg class="footer__copyright-icon">
             <use xlink:href="img/icons/icons.svg#copyright"></use>
           </svg>
-          2013 GYMSports
+          2020 GYMSports
         </p>
         <div class="links">
           <a class="header__link" href="#" >
