--- a/src/_from-blog.html
+++ b/src/_from-blog.html
@@ -1,33 +1,33 @@
 <div class="from-blog">
     <h2 class="from-blog__title">
-        FROM THE BLOG
+        Блог
     </h2>
     <div class="from-blog__block">
         <div class="from-blog__event">
             <img class="from-blog__img" src="img/small/trainer-man-1.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    Тренер - это творческая личность. А творческая личность имеет право на ошибку.
                 </p>
-                <p class="from-blog__date">26 May, 2013</p>
+                <p class="from-blog__date">25 Сен, 2020</p>
             </div>
         </div>
         <div class="from-blog__event">
             <img class="from-blog__img" src="img/small/trainer-woman-1.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    Тренер всегда будет оставаться в тени своих именитых учеников!
                 </p>
-                <p class="from-blog__date">26 May, 2013</p>
+                <p class="from-blog__date">23 Сен, 2020</p>
             </div>
         </div>
         <div class="from-blog__event">
             <img class="from-blog__img" src="img/small/trainer-man-2.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    Когда говорят — «боксер от Бога», я утверждаю — «боксер от Тренера».
                 </p>
-                <p class="from-blog__date">26 May, 2013</p>
+                <p class="from-blog__date">20 Сен, 2020</p>
             </div>
         </div>
     </div>
