--- a/src/_gallery-partner.html
+++ b/src/_gallery-partner.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="gallery-partner__wrapper">
       <div class="gallery-partner__gallery">
-        <h2 class="gallery-partner__gallery-title">Gallery</h2>
+        <h2 class="gallery-partner__gallery-title">Галерея</h2>
         <div class="gallery-partner__carousel">
           <div class="gallery-partner__carousel-content">
             <img class="carousel-img" src="img/gallery/gallery-1.jpg" alt="carousel-img" />
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="gallery-partner__partner">
-        <h2 class="gallery-partner__partner-title">Partner</h2>
+        <h2 class="gallery-partner__partner-title">Партнеры</h2>
         <div class="gallery-partner__partners">
           <img class="partners-img" src="img/index/nike.png" alt="partners-img" />
           <img class="partners-img" src="img/index/adidas.png" alt="partners-img" />
