--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -5,10 +5,10 @@
   <div class="trainers__block">
     <div class="trainers__trainer">
       <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-      <p class="trainers__name">REBECCA SMITH</p>
-      <p class="trainers__spec">SPINNING</p>
+      <p class="trainers__name">Ребекка Смит</p>
+      <p class="trainers__spec">Спиннинг</p>
       <p class="trainers__info">
-        Creating the perfect body is no small matter.
+        Тренер, который отдает вам всего себя
       </p>
       <div class="trainers__icons">
         <svg class="trainers__icon trainers__icon-like">
@@ -32,10 +32,10 @@
     <hr>
     <div class="trainers__trainer">
       <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
-      <p class="trainers__name">John Jones</p>
-      <p class="trainers__spec">KIK BOXING</p>
+      <p class="trainers__name">Джон Джонс</p>
+      <p class="trainers__spec">Кик Боксинг</p>
       <p class="trainers__info">
-        Creating the perfect body is no small matter.
+        Он же папа, мама, бабушка и дедушка
       </p>
       <div class="trainers__icons">
         <svg class="trainers__icon trainers__icon-like">
