--- a/src/index.html
+++ b/src/index.html
@@ -95,60 +95,60 @@
         </iframe>
       </div>
       <div class="schedule">
-        <h3 class="schedule__title">Opening Hours</h3>
+        <h3 class="schedule__title">Часы работы</h3>
         <ul class="schedule__list">
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Понедельник</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Вторник</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Среда</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Четверг</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Пятница</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Суббота</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
           <li class="schedule__day">
             <svg class="schedule__calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
-            <p class="schedule__day-name">Monday</p>
+            <p class="schedule__day-name">Воскресенье</p>
             <p class="schedule__time">6:00 - 24:00</p>
           </li>
         </ul>
-        <p class="schedule__info">Nam vestibulum, arcu sodales feugiat consectetur, nisl orci bibendum elit.</p>
-        <p class="schedule__subtext">Enjoy it!</p>
+        <p class="schedule__info">Мы всегда стараемся быть на шаг впереди!</p>
+        <p class="schedule__subtext">Присоединяйся к GYM!</p>
       </div>
     </section>
     @@include('_comment.html')
