--- a/src/_header.html
+++ b/src/_header.html
@@ -63,9 +63,6 @@
                 <a href="about.html" class="button-link header__button-link">О нас</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Тренеры</a>
-              </li>
-              <li class="header__nav">
                 <a href="timetable.html" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
@@ -85,7 +82,7 @@
                 </nav>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Блог</a>
+                <a href="blog.html" class="button-link header__button-link">Блог</a>
               </li>
               <li class="header__nav">
                 <a href="pricing.html" class="button-link header__button-link">Цены</a>
