--- a/src/_all-classes.html
+++ b/src/_all-classes.html
@@ -10,12 +10,12 @@
           <p class="all-classes__text">Кардио фитнес</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -40,12 +40,12 @@
           <p class="all-classes__text">Спиннинг</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -70,12 +70,12 @@
           <p class="all-classes__text">Пилатес</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -100,12 +100,12 @@
           <p class="all-classes__text">Бокс</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -130,12 +130,12 @@
           <p class="all-classes__text">Кик-боксинг</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -160,12 +160,12 @@
           <p class="all-classes__text">Аэробика</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -190,12 +190,12 @@
           <p class="all-classes__text">Кроссфит</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
@@ -220,12 +220,12 @@
           <p class="all-classes__text">Йога</p>
         </div>
         <div class="all-classes__links">
-          <a href="#" class="all-classes__link all-classes__link-calendar">
+          <a href="timetable.html" class="all-classes__link all-classes__link-calendar">
             <svg class="all-classes__link-icon calendar-icon">
               <use xlink:href="img/icons/icons.svg#calendar"></use>
             </svg>
           </a>
-          <a href="#" class="all-classes__link all-classes__link-email">
+          <a href="contact.html" class="all-classes__link all-classes__link-email">
             <svg class="all-classes__link-icon email-icon">
               <use xlink:href="img/icons/icons.svg#email"></use>
             </svg>
