--- a/src/_footer.html
+++ b/src/_footer.html
@@ -10,7 +10,7 @@
           и получайте самые свежие новости
           </p>
           <form class="footer__form" action="#" >
-            <input class="footer__input" type="text"  placeholder="Ваш Email">
+            <input class="footer__input" type="text"  placeholder="Ваш Email" required>
             <button class="footer__btn">Подтвердить подписку</button>
           </form>
         </div>
@@ -93,32 +93,27 @@
           2020 GYMSports
         </p>
         <div class="links">
-          <a class="header__link" href="#" >
+          <a class="header__link" href="https://www.facebook.com" target="_blank">
             <svg class="facebook-icon header__link-icon" >
               <use xlink:href="img/icons/icons.svg#facebook"></use>
             </svg>
           </a>
-          <a class="header__link" href="#" >
+          <a class="header__link" href="https://twitter.com" target="_blank">
             <svg class="twitter-icon header__link-icon" >
               <use xlink:href="img/icons/icons.svg#twitter"></use>
              </svg>
           </a>
-          <a class="header__link" href="#" >
+          <a class="header__link" href="https://www.pinterest.ru/" target="_blank">
             <svg class="printerest-icon header__link-icon" >
               <use xlink:href="img/icons/icons.svg#pinterest"></use>
             </svg>
           </a>
-          <a class="header__link" href="#" >
-            <svg class="google-plus-icon header__link-icon" >
-              <use xlink:href="img/icons/icons.svg#google-plus-logo"></use>
+          <a class="header__link" href="https://www.tumblr.com" target="_blank">
+            <svg class="tumblr-icon header__link-icon" >
+              <use xlink:href="img/icons/icons.svg#tumblr"></use>
             </svg>
           </a>
-          <a class="header__link" href="#" >
-            <svg class="twitter-icon header__link-icon" >
-              <use xlink:href="img/icons/icons.svg#twitter"></use>
-            </svg>
-          </a>
-          <a class="header__link" href="#" >
+          <a class="header__link" href="https://www.instagram.com" target="_blank">
             <svg class="instagram-icon header__link-icon" >
               <use xlink:href="img/icons/icons.svg#instagram"></use>
             </svg>
