--- a/src/_header.html
+++ b/src/_header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
     <div class="header__top">
       <div class="container">
         <div class="header__top-inner">
@@ -9,32 +9,27 @@
             <p class="header__number">1-900-342-9876</p>
           </a>
           <div class="links">
-            <a class="header__link" href="#" >
+            <a class="header__link" href="https://www.facebook.com" target="_blank">
               <svg class="facebook-icon header__link-icon" >
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
             </a>
-            <a class="header__link" href="#" >
+            <a class="header__link" href="https://twitter.com" target="_blank">
               <svg class="twitter-icon header__link-icon" >
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
                </svg>
             </a>
-            <a class="header__link" href="#" >
+            <a class="header__link" href="https://www.pinterest.ru/" target="_blank">
               <svg class="printerest-icon header__link-icon" >
                 <use xlink:href="img/icons/icons.svg#pinterest"></use>
               </svg>
             </a>
-            <a class="header__link" href="#" >
-              <svg class="google-plus-icon header__link-icon" >
-                <use xlink:href="img/icons/icons.svg#google-plus-logo"></use>
+            <a class="header__link" href="https://www.tumblr.com" target="_blank">
+              <svg class="tumblr-icon header__link-icon" >
+                <use xlink:href="img/icons/icons.svg#tumblr"></use>
               </svg>
             </a>
-            <a class="header__link" href="#" >
-              <svg class="twitter-icon header__link-icon" >
-                <use xlink:href="img/icons/icons.svg#twitter"></use>
-              </svg>
-            </a>
-            <a class="header__link" href="#" >
+            <a class="header__link" href="https://www.instagram.com" target="_blank">
               <svg class="instagram-icon header__link-icon" >
                 <use xlink:href="img/icons/icons.svg#instagram"></use>
               </svg>
