--- a/src/_prices.html
+++ b/src/_prices.html
@@ -10,6 +10,6 @@
     <p class="prices__block-subtitle">
       Скидка на услуги и процедуры в GYM для всех держателей карт
     </p>
-    <a href="#" class="button-link">Узнать больше</a>
+    <a href="pricing.html" class="button-link">Узнать больше</a>
   </div>
 </div>
