--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -3,57 +3,120 @@
     Наши тренеры
   </h2>
   <div class="trainers__block">
-    <div class="trainers__trainer">
-      <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-      <p class="trainers__name">Ребекка Смит</p>
-      <p class="trainers__spec">Спиннинг</p>
-      <p class="trainers__info">
-        Тренер, который отдает вам всего себя
-      </p>
-      <div class="trainers__icons">
-        <svg class="trainers__icon trainers__icon-like">
-          <use xlink:href="img/icons/icons.svg#like"></use>
-        </svg>
-        <svg class="trainers__icon trainers__icon-thumb">
-          <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
-        </svg>
-        <a href="#" class="trainers__twitter-link">
-          <svg class="trainers__icon trainers__icon-twitter">
-            <use xlink:href="img/icons/icons.svg#twitter"></use>
-          </svg>
-        </a>
-        <a href="#" class="trainers__facebook-link">
-          <svg class="trainers__icon trainers__icon-facebook">
-            <use xlink:href="img/icons/icons.svg#facebook"></use>
-          </svg>
-        </a>
+    <div class="trainers__slider">
+      <div class="trainers__slider-slide">
+        <div class="trainers__slider-block">
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+          <p class="trainers__name">Ребекка Смит</p>
+          <p class="trainers__spec">Спиннинг</p>
+          <p class="trainers__info">
+            Тренер, который отдает вам всего себя
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+          <hr>
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
+          <p class="trainers__name">Джон Джонс</p>
+          <p class="trainers__spec">Кик Боксинг</p>
+          <p class="trainers__info">
+            Он же папа, мама, бабушка и дедушка
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <hr>
-    <div class="trainers__trainer">
-      <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
-      <p class="trainers__name">Джон Джонс</p>
-      <p class="trainers__spec">Кик Боксинг</p>
-      <p class="trainers__info">
-        Он же папа, мама, бабушка и дедушка
-      </p>
-      <div class="trainers__icons">
-        <svg class="trainers__icon trainers__icon-like">
-          <use xlink:href="img/icons/icons.svg#like"></use>
-        </svg>
-        <svg class="trainers__icon trainers__icon-thumb">
-          <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
-        </svg>
-        <a href="#" class="trainers__twitter-link">
-          <svg class="trainers__icon trainers__icon-twitter">
-            <use xlink:href="img/icons/icons.svg#twitter"></use>
-          </svg>
-        </a>
-        <a href="#" class="trainers__facebook-link">
-          <svg class="trainers__icon trainers__icon-facebook">
-            <use xlink:href="img/icons/icons.svg#facebook"></use>
-          </svg>
-        </a>
+      <div class="trainers__slider-slide">
+        <div class="trainers__slider-block">
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+          <p class="trainers__name">Ребекка Смит</p>
+          <p class="trainers__spec">Спиннинг</p>
+          <p class="trainers__info">
+            Тренер, который отдает вам всего себя
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+          <hr>
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
+          <p class="trainers__name">Джон Джонс</p>
+          <p class="trainers__spec">Кик Боксинг</p>
+          <p class="trainers__info">
+            Он же папа, мама, бабушка и дедушка
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
