--- a/src/_events.html
+++ b/src/_events.html
@@ -16,7 +16,7 @@
         <p class="events__text">
           Гимнастика, состоящая из аэробных упражнений под ритмичную музыку
         </p>
-        <a href="#" class="events__btn">Читать</a>
+        <a href="class-single-aerobics.html" class="events__btn">Читать</a>
       </div>
     </div>
     <hr class="events__divide">
@@ -33,7 +33,7 @@
         <p class="events__text">
           Ритмическое катание на тренажере-велосипеде в ритм музыки
         </p>
-        <a href="#" class="events__btn">Читать</a>
+        <a href="class-single-spinning.html" class="events__btn">Читать</a>
       </div>
     </div>
   </div>
