--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css" />
 
@@ -23,8 +24,15 @@
         <p class="upperheader__info-text">Сеть фитнес клубов GYM является экспертом в области фитнеса. Большой выбор спортивного оборудования открывает Вам возможности физического развития в любом направлении
         </p>
       </div>
-      <a href="#" class="button-link upperheader__button-link">Read More</a>
+      <a href="#" class="button-link upperheader__button-link">
+        <span>О нас</span>
+      </a>
     </div>
+    <a href="#header" class="upperheader__arrow">
+      <svg class="upperheader__arrow-icon">
+        <use xlink:href="img/icons/icons.svg#next"></use>
+      </svg>
+    </a>
   </section>
   @@include('_header.html')
   <main class="main">
@@ -154,6 +162,11 @@
     @@include('_comment.html')
   </main>
   @@include('_footer.html')
+
+  
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
