--- a/src/_footer.html
+++ b/src/_footer.html
@@ -11,7 +11,11 @@
           </p>
           <form class="footer__form" action="#" >
             <input class="footer__input" type="text"  placeholder="Ваш Email" required>
-            <button class="footer__btn">Подтвердить подписку</button>
+            <button class="footer__btn">Подтвердить подписку
+              <svg class="footer__btn-arrow">
+                <use xlink:href="img/icons/icons.svg#next"></use>
+              </svg>
+            </button>
           </form>
         </div>
         <div class="footer__contacts">
@@ -36,19 +40,15 @@
           </h3>
           <ul class="footer__menu-list">
             <li class="footer__menu-name">
-              <a href="#" class="footer__menu-link">
+              <a href="about.html" class="footer__menu-link">
                 О нас</a>
             </li>
             <li class="footer__menu-name">
-              <a href="#" class="footer__menu-link">
-                Тренеры</a>
-            </li>
-            <li class="footer__menu-name">
-              <a href="#" class="footer__menu-link">
+              <a href="classes.html" class="footer__menu-link">
                 Категории</a>
             </li>
             <li class="footer__menu-name">
-              <a href="#" class="footer__menu-link">
+              <a href="pricing.html" class="footer__menu-link">
                 Цена</a>
             </li>
             <li class="footer__menu-name">
@@ -56,7 +56,7 @@
                 Политика</a>
             </li>
             <li class="footer__menu-name">
-              <a href="#" class="footer__menu-link">
+              <a href="contact.html" class="footer__menu-link">
                 Контакты</a>
             </li>
           </ul>
@@ -67,13 +67,13 @@
           </h3>
           <ul class="footer__community-list">
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">Блог</a>
+              <a href="blog.html" class="footer__community-link">Блог</a>
             </li>
             <li class="footer__community-name">
               <a href="#" class="footer__community-link">Форум</a>
             </li>
             <li class="footer__community-name">
-              <a href="#" class="footer__community-link">Поддержка</a>
+              <a href="contact.html" class="footer__community-link">Поддержка</a>
             </li>
             <li class="footer__community-name">
               <a href="#" class="footer__community-link">Новости</a>
