--- a/src/_events.html
+++ b/src/_events.html
@@ -8,7 +8,7 @@
         <p class="events__date-text">
           15 сен, 2020
         </p>
-        <img class="events__img" src="/img/aerobics-1.jpg" alt="aerobics-img">
+        <img class="events__img" src="img/aerobics-1.jpg" alt="aerobics-img">
       </div>
       <div class="events__info">
         <p class="events__time">10.00 - 12.00</p>
@@ -25,7 +25,7 @@
         <p class="events__date-text">
           26 Сен, 2020
         </p>
-        <img class="events__img" src="/img/aerobics-1.jpg" alt="aerobics-img">
+        <img class="events__img" src="img/spinning-1.jpg" alt="aerobics-img">
       </div>
       <div class="events__info">
         <p class="events__time">12.00 - 13.00</p>
