--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -7,7 +7,7 @@
       <div class="trainers__slider-slide">
         <div class="trainers__slider-block">
           <div class="trainers__trainer">
-          <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+          <img class="trainers__img" src="img/small/rebecca.png" alt="trainer-img">
           <p class="trainers__name">Ребекка Смит</p>
           <p class="trainers__spec">Спиннинг</p>
           <p class="trainers__info">
@@ -34,7 +34,7 @@
           </div>
           <hr>
           <div class="trainers__trainer">
-          <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
+          <img class="trainers__img" src="img/small/john.jpg" alt="trainer-img">
           <p class="trainers__name">Джон Джонс</p>
           <p class="trainers__spec">Кик Боксинг</p>
           <p class="trainers__info">
@@ -64,11 +64,11 @@
       <div class="trainers__slider-slide">
         <div class="trainers__slider-block">
           <div class="trainers__trainer">
-          <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-          <p class="trainers__name">Ребекка Смит</p>
-          <p class="trainers__spec">Спиннинг</p>
+          <img class="trainers__img" src="img/small/jasmine.jpg" alt="trainer-img">
+          <p class="trainers__name">Жасмин Паттер</p>
+          <p class="trainers__spec">Аэробика</p>
           <p class="trainers__info">
-            Тренер, который отдает вам всего себя
+            Заряжаю своих учников своей энергией
           </p>
           <div class="trainers__icons">
             <svg class="trainers__icon trainers__icon-like">
@@ -91,11 +91,68 @@
           </div>
           <hr>
           <div class="trainers__trainer">
-          <img class="trainers__img" src="/img/trainer-man-1.png" alt="trainer-img">
-          <p class="trainers__name">Джон Джонс</p>
-          <p class="trainers__spec">Кик Боксинг</p>
+          <img class="trainers__img" src="img/small/jack.jpg" alt="trainer-img">
+          <p class="trainers__name">Джэк Гудман</p>
+          <p class="trainers__spec">Кардио Фитнес</p>
           <p class="trainers__info">
-            Он же папа, мама, бабушка и дедушка
+            Создаю идеальные тела для вас
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="trainers__slider-slide">
+        <div class="trainers__slider-block">
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="img/small/mark.jpg" alt="trainer-img">
+          <p class="trainers__name">Марк Шторм</p>
+          <p class="trainers__spec">Кроссфит</p>
+          <p class="trainers__info">
+            Прокачаю вашу выносливость и силу
+          </p>
+          <div class="trainers__icons">
+            <svg class="trainers__icon trainers__icon-like">
+              <use xlink:href="img/icons/icons.svg#like"></use>
+            </svg>
+            <svg class="trainers__icon trainers__icon-thumb">
+              <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+            </svg>
+            <a href="#" class="trainers__twitter-link">
+              <svg class="trainers__icon trainers__icon-twitter">
+                <use xlink:href="img/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="#" class="trainers__facebook-link">
+              <svg class="trainers__icon trainers__icon-facebook">
+                <use xlink:href="img/icons/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
+          </div>
+          <hr>
+          <div class="trainers__trainer">
+          <img class="trainers__img" src="img/small/dami.jpg" alt="trainer-img">
+          <p class="trainers__name">Дэми Мосс</p>
+          <p class="trainers__spec">Бокс</p>
+          <p class="trainers__info">
+            Научу давать всем сдачи
           </p>
           <div class="trainers__icons">
             <svg class="trainers__icon trainers__icon-like">
